fix camping gear links

--- a/app/content/categories/campinggear.mdx
+++ b/app/content/categories/campinggear.mdx
@@ -17,12 +17,12 @@ priceRanges: {
 |--------------|------------|-------------|------------------|-------------|
 | Nalgene Tritan 32oz Wide Mouth Bottle | $ | $15 | Practically indestructible water bottle made of BPA-free Tritan. Many owners use the same Nalgene for years of hiking and camping abuse. It's even guaranteed for life by the manufacturer, and countless anecdotes confirm it survives drops and freezing without cracking. A simple, classic piece of gear that just won't quit. | [Amazon](https://www.amazon.com/dp/B001NCDE1O?tag=buywhoa-20) |
 | Lodge Cast Iron Skillet – 12 inch | $ | $30 | A cast iron pan is as close to "forever" as cookware gets. This heavy-duty skillet can handle open-fire cooking and decades of use – often becoming a multi-generational heirloom. It has no coatings to wear out and actually improves with use as it builds seasoning. Users report cast irons lasting for decades with minimal care. Simply put, it's a nearly indestructible piece of cookware. | [Amazon](https://www.amazon.com/dp/B00006JSUA?tag=buywhoa-20) |
-| MSR WhisperLite International Stove | $$ | $100 | Legendary multi-fuel camping stove renowned for reliability. Its simple design (few moving parts) and field-serviceable parts mean it can literally last decades. Many adventurers have used the WhisperLite for 20+ years; one reviewer noted, "I've had mine for almost 20 years...if you clean it every 10 or so trips, it will last forever". Runs on white gas or gasoline, and spare O-rings or jets are easy to replace. A true buy-it-for-life backpacking stove. | [Amazon](https://www.amazon.com/dp/B000BBS4TQ?tag=buywhoa-20) |
-| Coleman Dual Fuel Lantern (2-Mantle) | $$ | $80 | Classic liquid-fuel lantern built to survive generations. Coleman's dual-fuel models from the 1960s are still commonly in use today – testimony to their durable build. One camper shared that a 1958 Coleman lantern in their family still works after 30 years, calling these lanterns "extremely well built and able to last a very long time if you treat them right." With an all-metal tank and frame plus widely available mantles and parts, this lantern can be serviced indefinitely. It's a shining example (literally) of BIFL gear for lighting. | [Amazon](https://www.amazon.com/dp/B0009PUQAU?tag=buywhoa-20) |
+| MSR WhisperLite International Stove | $$ | $100 | Legendary multi-fuel camping stove renowned for reliability. Its simple design (few moving parts) and field-serviceable parts mean it can literally last decades. Many adventurers have used the WhisperLite for 20+ years; one reviewer noted, "I've had mine for almost 20 years...if you clean it every 10 or so trips, it will last forever". Runs on white gas or gasoline, and spare O-rings or jets are easy to replace. A true buy-it-for-life backpacking stove. | [Amazon](https://amzn.to/4hQ4oxh) |
+| Coleman Dual Fuel Lantern (2-Mantle) | $$ | $80 | Classic liquid-fuel lantern built to survive generations. Coleman's dual-fuel models from the 1960s are still commonly in use today – testimony to their durable build. One camper shared that a 1958 Coleman lantern in their family still works after 30 years, calling these lanterns "extremely well built and able to last a very long time if you treat them right." With an all-metal tank and frame plus widely available mantles and parts, this lantern can be serviced indefinitely. It's a shining example (literally) of BIFL gear for lighting. | [Amazon](https://amzn.to/3EIyYKB) |
 | US Military Modular Sleep System (4-PC) | $$$ | $300 | Battle-tested sleeping bag system known for ruggedness. This is the same 4-part sleep kit (two nested bags + bivy cover) issued to soldiers for extreme conditions. Owners report it's virtually indestructible – one Army veteran said, "the thing's indestructible… I use it for hiking and camping a lot." Another user has been using theirs for 30 years. It's heavy for backpacking, but for durable long-term camping warmth (rated down to -30°F when layered), it's hard to beat. Replacement parts (zippers, snaps) are available through surplus channels, but most never need major repairs. | [Amazon](https://www.amazon.com/dp/B002LLPILC?tag=buywhoa-20) |
 | Osprey Atmos AG 65 Backpack (Men's) | $$$ | $270 | A tough trekking backpack backed by Osprey's famous All Mighty Guarantee, which promises to repair any damage no matter when it was made. Beyond the lifetime warranty, this pack is built for serious use: high-tenacity nylon fabric, robust stitching, and an anti-gravity suspension that's been proven on thru-hikes. Many owners report using Osprey packs for decades – and if a buckle or seam ever does fail, Osprey will fix or replace it free. In short, it's a pack designed to handle years of heavy adventure, with a company standing behind it for life. | [Amazon](https://www.amazon.com/dp/B086HMX9DB?tag=buywhoa-20) |
 | Yeti Tundra 45 Hard Cooler (Rotomolded) | $$$$ | $300 | A virtually bomb-proof cooler that has set the industry standard for durability. The Yeti Tundra's one-piece rotomolded polyethylene shell and pressure-injected foam insulation make it extremely tough – one review noted the "robust design and construction…do not disappoint," highlighting the thick, well-protected hinge that feels solid even under stress. Users routinely report these coolers surviving years of hunting camps, tailgates, and even bear encounters. While pricey, it's built to last for decades (backed by a 5-year warranty), with replaceable latches and gaskets to extend its life indefinitely. | [Amazon](https://www.amazon.com/dp/B004U6MHV0?tag=buywhoa-20) |
-| Kodiak Canvas Flex-Bow Tent (4-Person) | $$$$ | $600 | A heavy-duty canvas tent that can handle year after year of camping in harsh conditions. Its 100% cotton duck canvas is thick, waterproof (when properly seasoned), and far more tear-resistant than typical nylon – with care, it can last for decades. Campers often compare Kodiak canvas tents to old-school military tents for their toughness. One experienced user insisted "You want a Kodiak canvas tent…it's top of the line vs. wind and rain, and long lasting". The Flex-Bow frame uses solid spring steel rods that hold up to strong winds. Everything from zippers to seams is overbuilt. This tent is on the heavier side (not for backpacking), but for frequent car camping or basecamp use, it's a true buy-it-for-life shelter with an impressive lifetime of service. | [Amazon](https://www.amazon.com/dp/B001TSABMO?tag=buywhoa-20) |
+| Kodiak Canvas Flex-Bow Tent (4-Person) | $$$$ | $600 | A heavy-duty canvas tent that can handle year after year of camping in harsh conditions. Its 100% cotton duck canvas is thick, waterproof (when properly seasoned), and far more tear-resistant than typical nylon – with care, it can last for decades. Campers often compare Kodiak canvas tents to old-school military tents for their toughness. One experienced user insisted "You want a Kodiak canvas tent…it's top of the line vs. wind and rain, and long lasting". The Flex-Bow frame uses solid spring steel rods that hold up to strong winds. Everything from zippers to seams is overbuilt. This tent is on the heavier side (not for backpacking), but for frequent car camping or basecamp use, it's a true buy-it-for-life shelter with an impressive lifetime of service. | [Amazon](https://amzn.to/3QpMg1b) |
 
 ---
 
